// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - Collapse 1`] = `mocked`;

exports[`Mock render - default - value[0] - Collapse 2`] = `
Array [
  Array [
    Object {
      "accordion": undefined,
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          header={
            <HtmlComponent
              html="content"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content",
      "destroyInactivePanel": undefined,
      "expandIcon": undefined,
      "expandIconPosition": undefined,
      "id": "default",
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.accordion: true - value[0] - Collapse 1`] = `mocked`;

exports[`Mock render - properties.accordion: true - value[0] - Collapse 2`] = `
Array [
  Array [
    Object {
      "accordion": true,
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          header={
            <HtmlComponent
              html="Title One"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_one"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          header={
            <HtmlComponent
              html="Title Two"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_two"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "destroyInactivePanel": undefined,
      "expandIcon": undefined,
      "expandIconPosition": undefined,
      "id": "properties.accordion: true",
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.activeKey: content_two - value[0] - Collapse 1`] = `mocked`;

exports[`Mock render - properties.activeKey: content_two - value[0] - Collapse 2`] = `
Array [
  Array [
    Object {
      "accordion": undefined,
      "activeKey": "content_two",
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          header={
            <HtmlComponent
              html="Title One"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_one"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          header={
            <HtmlComponent
              html="Title Two"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_two"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "destroyInactivePanel": undefined,
      "expandIcon": undefined,
      "expandIconPosition": undefined,
      "id": "properties.activeKey: content_two",
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.bordered: false - value[0] - Collapse 1`] = `mocked`;

exports[`Mock render - properties.bordered: false - value[0] - Collapse 2`] = `
Array [
  Array [
    Object {
      "accordion": undefined,
      "bordered": false,
      "children": Array [
        <mockConstructor
          header={
            <HtmlComponent
              html="Title One"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_one"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          header={
            <HtmlComponent
              html="Title Two"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_two"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "destroyInactivePanel": undefined,
      "expandIcon": undefined,
      "expandIconPosition": undefined,
      "id": "properties.bordered: false",
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.defaultActiveKey: content_two - value[0] - Collapse 1`] = `mocked`;

exports[`Mock render - properties.defaultActiveKey: content_two - value[0] - Collapse 2`] = `
Array [
  Array [
    Object {
      "accordion": undefined,
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          header={
            <HtmlComponent
              html="Title One"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_one"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          header={
            <HtmlComponent
              html="Title Two"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_two"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_two",
      "destroyInactivePanel": undefined,
      "expandIcon": undefined,
      "expandIconPosition": undefined,
      "id": "properties.defaultActiveKey: content_two",
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.destroyInactivePanel: true - value[0] - Collapse 1`] = `mocked`;

exports[`Mock render - properties.destroyInactivePanel: true - value[0] - Collapse 2`] = `
Array [
  Array [
    Object {
      "accordion": undefined,
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          header={
            <HtmlComponent
              html="Title One"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_one"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          header={
            <HtmlComponent
              html="Title Two"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_two"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "destroyInactivePanel": true,
      "expandIcon": undefined,
      "expandIconPosition": undefined,
      "id": "properties.destroyInactivePanel: true",
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.expandIcon: AiOutlineArrowRight - value[0] - Collapse 1`] = `mocked`;

exports[`Mock render - properties.expandIcon: AiOutlineArrowRight - value[0] - Collapse 2`] = `
Array [
  Array [
    Object {
      "accordion": undefined,
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          header={
            <HtmlComponent
              html="Title One"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_one"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          header={
            <HtmlComponent
              html="Title Two"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_two"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "destroyInactivePanel": undefined,
      "expandIcon": [Function],
      "expandIconPosition": undefined,
      "id": "properties.expandIcon: AiOutlineArrowRight",
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.expandIconPosition: right - value[0] - Collapse 1`] = `mocked`;

exports[`Mock render - properties.expandIconPosition: right - value[0] - Collapse 2`] = `
Array [
  Array [
    Object {
      "accordion": undefined,
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          header={
            <HtmlComponent
              html="Title One"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_one"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          header={
            <HtmlComponent
              html="Title Two"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_two"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "destroyInactivePanel": undefined,
      "expandIcon": undefined,
      "expandIconPosition": "right",
      "id": "properties.expandIconPosition: right",
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.forceRender: true - value[0] - Collapse 1`] = `mocked`;

exports[`Mock render - properties.forceRender: true - value[0] - Collapse 2`] = `
Array [
  Array [
    Object {
      "accordion": undefined,
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          forceRender={true}
          header={
            <HtmlComponent
              html="Title One"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_one"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          forceRender={true}
          header={
            <HtmlComponent
              html="Title Two"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_two"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "destroyInactivePanel": undefined,
      "expandIcon": undefined,
      "expandIconPosition": undefined,
      "id": "properties.forceRender: true",
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.panels - value[0] - Collapse 1`] = `mocked`;

exports[`Mock render - properties.panels - value[0] - Collapse 2`] = `
Array [
  Array [
    Object {
      "accordion": undefined,
      "bordered": undefined,
      "children": Array [
        <mockConstructor>
          <div
            data-testid="area-content_one"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor>
          <div
            data-testid="area-content_two"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "destroyInactivePanel": undefined,
      "expandIcon": undefined,
      "expandIconPosition": undefined,
      "id": "properties.panels",
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.panels.disabled - value[0] - Collapse 1`] = `mocked`;

exports[`Mock render - properties.panels.disabled - value[0] - Collapse 2`] = `
Array [
  Array [
    Object {
      "accordion": undefined,
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          collapsible="disabled"
          header={
            <HtmlComponent
              html="Title One"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_one"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          collapsible="disabled"
          header={
            <HtmlComponent
              html="Title Two"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_two"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "destroyInactivePanel": undefined,
      "expandIcon": undefined,
      "expandIconPosition": undefined,
      "id": "properties.panels.disabled",
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.panels.extraKey - value[0] - Collapse 1`] = `mocked`;

exports[`Mock render - properties.panels.extraKey - value[0] - Collapse 2`] = `
Array [
  Array [
    Object {
      "accordion": true,
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          extra={
            <div
              data-testid="area-content_one_extra"
              style={
                Object {
                  "border": "1px solid red",
                  "padding": 10,
                }
              }
            >
              content_one_extra
            </div>
          }
          header={
            <HtmlComponent
              html="Title One"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_one"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          extra={
            <div
              data-testid="area-content_two_extra"
              style={
                Object {
                  "border": "1px solid red",
                  "padding": 10,
                }
              }
            >
              content_two_extra
            </div>
          }
          header={
            <HtmlComponent
              html="Title Two"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_two"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "destroyInactivePanel": undefined,
      "expandIcon": undefined,
      "expandIconPosition": undefined,
      "id": "properties.panels.extraKey",
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.panels.title - value[0] - Collapse 1`] = `mocked`;

exports[`Mock render - properties.panels.title - value[0] - Collapse 2`] = `
Array [
  Array [
    Object {
      "accordion": undefined,
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          header={
            <HtmlComponent
              html="Title One"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_one"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          header={
            <HtmlComponent
              html="Title Two"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        >
          <div
            data-testid="area-content_two"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "destroyInactivePanel": undefined,
      "expandIcon": undefined,
      "expandIconPosition": undefined,
      "id": "properties.panels.title",
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.showArrow: false - value[0] - Collapse 1`] = `mocked`;

exports[`Mock render - properties.showArrow: false - value[0] - Collapse 2`] = `
Array [
  Array [
    Object {
      "accordion": undefined,
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          header={
            <HtmlComponent
              html="Title One"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
          showArrow={false}
        >
          <div
            data-testid="area-content_one"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_one
          </div>
        </mockConstructor>,
        <mockConstructor
          header={
            <HtmlComponent
              html="Title Two"
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
          showArrow={false}
        >
          <div
            data-testid="area-content_two"
            style={
              Object {
                "border": "1px solid red",
                "padding": 10,
              }
            }
          >
            content_two
          </div>
        </mockConstructor>,
      ],
      "defaultActiveKey": "content_one",
      "destroyInactivePanel": undefined,
      "expandIcon": undefined,
      "expandIconPosition": undefined,
      "id": "properties.showArrow: false",
      "onChange": [Function],
    },
    Object {},
  ],
]
`;

exports[`Mock render - with html in panel title - value[0] - Collapse 1`] = `mocked`;

exports[`Mock render - with html in panel title - value[0] - Collapse 2`] = `
Array [
  Array [
    Object {
      "accordion": undefined,
      "bordered": undefined,
      "children": Array [
        <mockConstructor
          header={
            <HtmlComponent
              html=<div style="color:blue">
  Panel 1 Title
</div>
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        />,
        <mockConstructor
          header={
            <HtmlComponent
              html=<div style="color:green">
  Panel 2 Title
</div>
              methods={
                Object {
                  "makeCssClass": [MockFunction],
                  "registerEvent": [Function],
                  "registerMethod": [Function],
                  "triggerEvent": [Function],
                }
              }
            />
          }
        />,
      ],
      "defaultActiveKey": "content_one",
      "destroyInactivePanel": undefined,
      "expandIcon": undefined,
      "expandIconPosition": undefined,
      "id": "with html in panel title",
      "onChange": [Function],
    },
    Object {},
  ],
]
`;
